Added dashboard page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     </title>
 </head>
 
+<body>
+    <main role="main">
+        <section class="Dashboard" id="Dashboard">
+
+        </section>
+    </main>
+</body>
 
 
 
