--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
 
 <body>
     <main role="main">
-        <section class="Dashboard" id="Dashboard">
+        <nav class="sidebar">
+
+            
+
+        </nav>
+
+
+        <section class="dashboard" id="dashboard">
 
         </section>
+
+
     </main>
 </body>
 
