Alerts and Recent Activity

--- a/index.html
+++ b/index.html
@@ -359,6 +359,27 @@
             </button>
         </div>
     </div>
+            <div id="lowStockAlertBox" class="alert-card warning">
+                <div class="alert-header">
+                    ⚠️ Low Stock Alert
+                    <span class="alert-count"></span>
+                </div>
+                <div class="alert-list"></div>
+            </div>
+            <div id="outOfStockAlertBox" class="alert-card danger">
+                <div class="alert-header">
+                    ❌ Out of Stock
+                    <span class="alert-count"></span>
+                </div>
+                <div class="alert-list"></div>
+            </div>
+
+            <div class="card recent-activity-card">
+                <h3>Recent Activity</h3>
+                <ul id="recentActivityList">
+                    <li class="empty">No recent activity yet</li>
+                </ul>
+            </div>
 </div>
 
             <!-- Reports Content -->
