--- a/profile.html
+++ b/profile.html
@@ -286,7 +286,7 @@
         <div class="toggle-item">
           <div>
             <div class="toggle-title">Low Stock Alert</div>
-            <div class="toggle-desc">Get notified when items are low</div>
+            <div class="toggle-desc">Show Low Stock box on dashboard</div>
           </div>
           <label class="toggle-switch">
             <input type="checkbox" id="lowStockAlert" checked />
@@ -297,7 +297,7 @@
         <div class="toggle-item">
           <div>
             <div class="toggle-title">Out of Stock Alerts</div>
-            <div class="toggle-desc">Get notified when items unavailable</div>
+            <div class="toggle-desc">Show Out of Stock box on dashboard</div>
           </div>
           <label class="toggle-switch">
             <input type="checkbox" id="outOfStockAlert" checked />
