--- a/inventory.html
+++ b/inventory.html
@@ -97,6 +97,8 @@
 
             <div class="top-actions">
               <button class="btn-primary add-btn" type="button" id="openAddProductBtn">+ Add New</button>
+              <button class="btn action-btn btn-import" type="button" id="openImportBtn">⬇ Import</button>
+              <button class="btn action-btn btn-export" type="button" id="openExportBtn">⇧ Export</button>
             </div>
           </div>
 
@@ -143,8 +145,7 @@
 
           <div class="form-row">
             <div class="form-group">
-              <label>Quantity</label>
-              <input type="number" id="newProdQty" class="form-input" required min="0" placeholder="0" />
+              <input type="hidden" id="newProdQty" class="form-input" required min="0" placeholder="0" />
             </div>
             <div class="form-group">
               <label>Low Stock Alert</label>
@@ -165,6 +166,123 @@
       </form>
     </div>
   </div>
+  
+  <!-- Import Modal -->
+  <div id="importModal" class="modal">
+    <div class="modal-content modal-sm">
+      <div class="modal-header">
+        <h3>Import Product</h3>
+        <button class="modal-close" id="closeImportModal">&times;</button>
+      </div>
+
+      <form id="importForm">
+        <div class="modal-body">
+
+          <div class="form-group">
+            <label>SKU</label>
+            <input type="text" id="impSku" class="form-input" required placeholder="Enter SKU..." />
+            <small id="impSkuHint" class="hint"></small>
+          </div>
+
+          <div class="form-group">
+            <label>Quantity</label>
+            <input type="number" id="impQty" class="form-input" required min="1" placeholder="1" />
+            <small id="impQtyHint" class="hint"></small>
+          </div>
+
+          <div class="form-group">
+            <label>Product Name</label>
+            <input type="text" id="impProductName" class="form-input" readonly />
+          </div>
+
+          <div class="form-group">
+            <label>Unit Price (RM)</label>
+            <input type="text" id="impUnitPrice" class="form-input" readonly />
+          </div>
+
+          <div class="form-group">
+            <label>Current Stock</label>
+            <input type="text" id="impCurrentStock" class="form-input" readonly />
+          </div>
+
+          <div class="form-group">
+            <label>Total Value Added (RM)</label>
+            <input type="text" id="impTotalAmount" class="form-input" readonly />
+          </div>
+
+        </div>
+
+        <div class="modal-actions">
+          <button type="button" class="btn-secondary" id="cancelImportBtn">Cancel</button>
+          <button type="submit" class="btn-primary">Confirm Import</button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <!-- Export Modal -->
+<div id="exportModal" class="modal">
+  <div class="modal-content modal-sm">
+    <div class="modal-header">
+      <h3>Export Product</h3>
+      <button class="modal-close" id="closeExportModal">&times;</button>
+    </div>
+
+    <form id="exportForm">
+      <div class="modal-body">
+
+        <div class="form-group">
+          <label>Vendor Name</label>
+          <input type="text" id="expVendorName" class="form-input" required placeholder="e.g. ABC Supplier" />
+        </div>
+
+        <div class="form-group">
+          <label>Vendor Phone</label>
+          <input type="text" id="expVendorPhone" class="form-input" placeholder="e.g. +60 12-3456789" />
+        </div>
+
+        <div class="form-group">
+          <label>Vendor Email</label>
+          <input type="email" id="expVendorEmail" class="form-input" placeholder="e.g. abc@email.com" />
+        </div>
+
+        <div class="form-group">
+          <label>SKU</label>
+          <input type="text" id="expSku" class="form-input" required placeholder="Enter SKU..." />
+          <small id="expSkuHint" class="hint"></small>
+        </div>
+
+        <div class="form-group">
+          <label>Quantity</label>
+          <input type="number" id="expQty" class="form-input" required min="1" placeholder="1" />
+          <small id="expQtyHint" class="hint"></small>
+        </div>
+
+        <div class="form-group">
+          <label>Product Name</label>
+          <input type="text" id="expProductName" class="form-input" readonly />
+        </div>
+
+        <div class="form-group">
+          <label>Price (RM)</label>
+          <input type="text" id="expUnitPrice" class="form-input" readonly />
+        </div>
+
+        <div class="form-group">
+          <label>Total Price (RM)</label>
+          <input type="text" id="expTotalPrice" class="form-input" readonly />
+        </div>
+
+      </div>
+
+      <div class="modal-actions">
+        <button type="button" class="btn-secondary" id="cancelExportBtn">Cancel</button>
+        <button type="submit" class="btn-primary">Confirm Export</button>
+      </div>
+    </form>
+  </div>
+</div>
+
 
   <!-- Product Details Modal -->
   <div id="productDetailsModal" class="modal">
