Update layout and fixed some bugs

--- a/inventory.html
+++ b/inventory.html
@@ -95,6 +95,17 @@
               <input type="text" placeholder="Search products......" id="inventorySearch" />
             </div>
 
+            <div class="sort-box">
+              <span class="sort-label">Sort by</span>
+              <select id="inventorySortCategory" class="sort-select">
+                <option value="ALL">All Categories</option>
+                <option value="Electronics">Electronics</option>
+                <option value="Office">Office Supplies</option>
+                <option value="Furniture">Furniture</option>
+                <option value="Other">Other</option>
+              </select>
+            </div>
+
             <div class="top-actions">
               <button class="btn-primary add-btn" type="button" id="openAddProductBtn">+ Add New</button>
               <button class="btn action-btn btn-import" type="button" id="openImportBtn">⬇ Import</button>
